--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron ."
   },
-  "author": "",
+  "author": "Arne Reijntjes",
   "license": "ISC",
   "devDependencies": {
     "electron": "^9.0.0"
